--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Gojo-Satoru",
+  "name": "Black Panther MD",
   "description": "whatsapp md bot build with nodejs",
-  "repository": "https://github.com/nexusNw/Gojo-Satoru",
-  "logo": "https://telegra.ph/file/4c2c0174e86ac3bac2ba8.jpg",
+  "repository": "https://github.com/BlackPanther-svg/BLACK-PANTHER-MD-V2",
+  "logo": "https://i.ibb.co/yQBM4yx/wp1869937.png",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
