--- a/app.json
+++ b/app.json
@@ -1,9 +1,15 @@
 {
-  "name": "Black Panther MD",
+
+  "name": "Black Panther Multi Device Bot",
+
   "description": "whatsapp md bot build with nodejs",
+
   "repository": "https://github.com/BlackPanther-svg/BLACK-PANTHER-MD-V2",
+
   "logo": "https://i.ibb.co/yQBM4yx/wp1869937.png",
+
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
+
   "buildpacks": [
 
     {
@@ -17,6 +23,12 @@
       "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
 
     },
+
+    {
+
+            "url": "https://github.com/yespark/heroku-imagemagick-buildpack"
+
+        },
 
     {
 
@@ -39,5 +51,3 @@
     }
 
 }
-
-© 2022 GitHub, Inc.
