--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
 
-  "name": "Black Panther Multi Device Bot",
+  "name": "Queen Ashiya Multi Device Bot",
 
   "description": "whatsapp md bot build with nodejs",
 
-  "repository": "https://github.com/BlackPanther-svg/BLACK-PANTHER-MD-V2",
+  "repository": "https://github.com/BlackPanther-svg/https://github.com/BlackPanther-svg/Queen-Ashiya-PANTHER-MD-V2",
 
-  "logo": "https://i.ibb.co/yQBM4yx/wp1869937.png",
+  "logo": "https://i.ibb.co/fNQdj2h/Qeen-Ashiya.jpg",
 
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
 
