--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
 
-  "name": "Queen Ashiya Multi Device Bot",
+  "name": "Queen Ashiya",
 
   "description": "whatsapp md bot build with nodejs",
 
-  "repository": "https://github.com/BlackPanther-svg/https://github.com/BlackPanther-svg/Queen-Ashiya-PANTHER-MD-V2",
+  "repository": "https://github.com/BlackPanther-svg/Queen-Ashiya",
 
   "logo": "https://i.ibb.co/fNQdj2h/Qeen-Ashiya.jpg",
 
@@ -51,9 +51,3 @@
     }
 
 }
-
-Footer
-
-© 2022 GitHub, Inc.
-
-Footer navigation
