--- a/app.json
+++ b/app.json
@@ -1,53 +1,48 @@
-{
+{ 
 
-  "name": "Queen Ashiya",
+   "name": "Queen Ashiya MD", 
 
-  "description": "whatsapp md bot build with nodejs",
+   "description": "whatsapp md bot build with nodejs", 
 
-  "repository": "https://github.com/BlackPanther-svg/Queen-Ashiyamd",
+   "repository": "https://github.com/BlackPanther-svg/Queen-Ashiya", 
 
-  "logo": "https://i.ibb.co/fNQdj2h/Qeen-Ashiya.jpg",
+   "logo": "", 
 
-  "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
+   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"], 
 
-  "buildpacks": [
+   "buildpacks": [ 
 
-    {
+     { 
 
-      "url": "heroku/nodejs"
+       "url": "heroku/nodejs" 
 
-    },
+     }, 
 
-    {
+     { 
 
-      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+       "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest" 
 
-    },
+     }, 
 
-    {
+     { 
 
-            "url": "https://github.com/yespark/heroku-imagemagick-buildpack"
+       "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git" 
 
-        },
+     } 
 
-    {
+   ], 
 
-      "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
+    "formation": { 
 
-    }
+         "worker": { 
 
-  ],
+             "quantity": 1, 
 
-   "formation": {
+             "size": "free" 
 
-        "worker": {
+         } 
 
-            "quantity": 1,
+     } 
 
-            "size": "free"
+ }
 
-        }
-
-    }
-
-}
