--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
 
    "description": "whatsapp md bot build with nodejs", 
 
-   "repository": "https://github.com/BlackPanther-svg/Queen-Ashiya", 
+   "repository": "", 
 
-   "logo": "", 
+   "logo": "https://i.ibb.co/fNQdj2h/Qeen-Ashiya.jpg", 
 
    "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"], 
 
